--- a/hanoi.html
+++ b/hanoi.html
@@ -32,6 +32,9 @@
     </div>
     <br>
     <br>
-    <textarea rows="3" cols="40" readonly id="textarea"></textarea>
+    <div>
+        <textarea rows="3" cols="40" readonly id="textarea"></textarea>
+        <textarea rows="1" cols="10" readonly id="movs">Movs: 0</textarea>
+    </div>
 </body>
 </html>
